+ new
* changed
- removed

--------------------------------------------------------------------------------

🧑‍🎄 OpenMoji 13.1 - ?? ??? 2020

New:
  + Colorful hexagons by @fuddl #278

Redesign:
  * Amphora, Pile of Books, Dagger, Teddy Bear, Caterpillar, Lady Beetle, Microscope, 
    Mosquito, Cactus, Kimono, Old Man, Guardsaman, Moyai, Mosque, Train Car, 
    Bowl with Spoon
    by Liz Bravo @lizbravob

Fix:
  * Consistency of contours of black shapes by @fuddl #273
  * Expression in Face with Hand Over Mouth by Liz Bravo #285

--------------------------------------------------------------------------------

🥳 OpenMoji 13.0 - 13 Nov 2020

Many improvements, fixes and new OpenMojis:
👉 Full support of Unicode Emoji 13.0. Yay!
👉 New Coronavirus related emojis by Guemil Project
👉 Lots of fixes and redesigns
👉 New logos and symbols

🙏 Special thanks to @lizbravob and @fuddl for all the generous contributions!

New:
  + Emoji 13:
    1F6D6 Hut, 1F6D7 Elevator, 1F9A3 Mammoth, 1F9A4 Dodo, 1F9AB Beaver, 1F9AC Bison,
    1F9AD Seal, 1F9D1-200D-1F37C Person Feeding Baby, 1F9D1-200D-1F384 Mx Claus,
    1F90C Pinched Fingers, 1F468-200D-1F37C Man Feeding Baby, 1F469-200D-1F37C Woman
    Feeding Baby, 1F470 Person in Veil, 1F935 Person in Tuxedo, 1F977 Ninja,
    1FA9C Ladder, 1FA96 Military Helmet, 1FAA2 Knot, 1FAA8 Rock, 1FAB2 Bettle,
    1FAB3 Cock Roach, 1FAB5 Wood, 1F935-200D-2640-FE0F Woman with Tuxedo,
    1F470-200D-2642-FE0F Man in Veil
    by Liz Bravo @lizbravob
  + New emergency and COVID related emojis by Guemil Project
    E0AC, E0AD, E0AE, E0AF, E0B0, E0B1, E0B2, E0B3, E0B4
  + E048 to E04B Logos of OpenData projects e.g. OpenStreetMap by @fuddl
  + Black hole by @fuddl
  + Horse jumping hurdles
  + Catalonia flag by Joan Montané
  + Asturies flag by Mikel González
  + Browser vendor logos by @fuddl
  + Stick figures by @fuddl
  + Unicode 11 half stars + unicode 1.1 black star by @fuddl

Redesign:
  * Construction
  * Animals: