@@ -335,7 +335,7 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 😤,1F624,,Mariella Steeb,2018-04-18
 😦,1F626,,Mariella Steeb,2018-04-18
 😧,1F627,,Mariella Steeb,2018-04-18
-😨,1F628,,Mariella Steeb,2018-04-18
+😨,1F628,,Liz Bravo,2020-12-27
 😩,1F629,distraught,Mariella Steeb,2018-04-18
 😬,1F62C,awkward,Daniel Utz,2019-11-11
 😭,1F62D,,Carlin MacKenzie,2020-05-11
@@ -344,7 +344,7 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 😳,1F633,red jaws,Mariella Steeb,2018-04-18
 😵,1F635,dead eyes,Mariella Steeb,2018-04-18
 🙁,1F641,,Mariella Steeb,2018-04-18
-🤬,1F92C,angry,Mariella Steeb,2018-04-18
+🤬,1F92C,angry,Liz Bravo,2020-12-27
 🤪,1F92A,,Mariella Steeb,2018-04-18
 🤯,1F92F,explosion,Tara Lynn Connelly,2020-04-13
 😌,1F60C,,Mariella Steeb,2018-04-18
@@ -359,7 +359,7 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 😜,1F61C,,Mariella Steeb,2018-04-18
 😝,1F61D,,Mariella Steeb,2018-04-18
 😣,1F623,,Mariella Steeb,2018-04-18
-😥,1F625,,Mariella Steeb,2018-04-18
+😥,1F625,,Liz Bravo,2020-12-27
 😪,1F62A,"snot bubble, side-tear",Mariella Steeb,2018-04-18
 😫,1F62B,exhausted,Mariella Steeb,2018-04-18
 😮,1F62E,,Mariella Steeb,2018-04-18
@@ -1572,7 +1572,7 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 🤍,1F90D,,Laura Dworatschek,2019-05-06
 🤎,1F90E,,Laura Dworatschek,2019-05-06
 🤏,1F90F,,Laura Dworatschek,2019-05-06
-🥱,1F971,,Laura Dworatschek,2019-05-06
+🥱,1F971,,Liz Bravo,2020-12-27
 🦻,1F9BB,,Laura Dworatschek,2019-05-06
 🦾,1F9BE,,Laura Dworatschek,2019-05-06
 🦿,1F9BF,,Laura Dworatschek,2019-05-06
