@@ -74,9 +74,9 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 🥺,1F97A,smileys-emotion,face-concerned,pleading face,"begging, mercy, puppy eyes",,Antonia Wagner,2019-05-03,,,,,11,75
 😦,1F626,smileys-emotion,face-concerned,frowning face with open mouth,"face, frown, mouth, open",,Mariella Steeb,2018-04-18,,,,,1,76
 😧,1F627,smileys-emotion,face-concerned,anguished face,"anguished, face",,Mariella Steeb,2018-04-18,,,,,1,77
-😨,1F628,smileys-emotion,face-concerned,fearful face,"face, fear, fearful, scared",,Mariella Steeb,2018-04-18,,,,,0.6,78
+😨,1F628,smileys-emotion,face-concerned,fearful face,"face, fear, fearful, scared",,Liz Bravo,2020-12-27,,,,,0.6,78
 😰,1F630,smileys-emotion,face-concerned,anxious face with sweat,"blue, cold, face, rushed, sweat","anxious, worried, considerate",Mariella Steeb,2018-04-18,,,,,0.6,79
-😥,1F625,smileys-emotion,face-concerned,sad but relieved face,"disappointed, face, relieved, whew",,Mariella Steeb,2018-04-18,,,,,0.6,80
+😥,1F625,smileys-emotion,face-concerned,sad but relieved face,"disappointed, face, relieved, whew",,Liz Bravo,2020-12-27,,,,,0.6,80
 😢,1F622,smileys-emotion,face-concerned,crying face,"cry, face, sad, tear",,Mariella Steeb,2018-04-18,,,,,0.6,81
 😭,1F62D,smileys-emotion,face-concerned,loudly crying face,"cry, face, sad, sob, tear",,Carlin MacKenzie,2020-05-11,,,,,0.6,82
 😱,1F631,smileys-emotion,face-concerned,face screaming in fear,"face, fear, munch, scared, scream",open mouth,Mariella Steeb,2018-04-18,,,,,0.6,83
@@ -86,11 +86,11 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 😓,1F613,smileys-emotion,face-concerned,downcast face with sweat,"cold, face, sweat",,Mariella Steeb,2018-04-18,,,,,0.6,87
 😩,1F629,smileys-emotion,face-concerned,weary face,"face, tired, weary",distraught,Mariella Steeb,2018-04-18,,,,,0.6,88
 😫,1F62B,smileys-emotion,face-concerned,tired face,"face, tired",exhausted,Mariella Steeb,2018-04-18,,,,,0.6,89
-🥱,1F971,smileys-emotion,face-concerned,yawning face,"bored, tired, yawn",,Laura Dworatschek,2019-05-06,,,,,12,90
+🥱,1F971,smileys-emotion,face-concerned,yawning face,"bored, tired, yawn",,Liz Bravo,2020-12-27,,,,,12,90
 😤,1F624,smileys-emotion,face-negative,face with steam from nose,"face, triumph, won",,Mariella Steeb,2018-04-18,,,,,0.6,91
 😡,1F621,smileys-emotion,face-negative,pouting face,"angry, face, mad, pouting, rage, red",,Mariella Steeb,2018-04-18,,,,,0.6,92
 😠,1F620,smileys-emotion,face-negative,angry face,"angry, face, mad",,Mariella Steeb,2018-04-18,,,,,0.6,93
-🤬,1F92C,smileys-emotion,face-negative,face with symbols on mouth,swearing,angry,Mariella Steeb,2018-04-18,,,,,5,94
+🤬,1F92C,smileys-emotion,face-negative,face with symbols on mouth,swearing,angry,Liz Bravo,2020-12-27,,,,,5,94
 😈,1F608,smileys-emotion,face-negative,smiling face with horns,"face, fairy tale, fantasy, horns, smile","malicious, sardonic",Mariella Steeb,2018-04-18,,,,,1,95
 👿,1F47F,smileys-emotion,face-negative,angry face with horns,"demon, devil, face, fantasy, imp",mean,Mariella Steeb,2018-04-18,,,,,0.6,96
 💀,1F480,smileys-emotion,face-negative,skull,"death, face, fairy tale, monster",skull,Mariella Steeb,2018-04-18,,,,,0.6,97
