@@ -1282,8 +1282,8 @@
     "annotation": "fearful face",
     "tags": "face, fear, fearful, scared",
     "openmoji_tags": "",
-    "openmoji_author": "Mariella Steeb",
-    "openmoji_date": "2018-04-18",
+    "openmoji_author": "Liz Bravo",
+    "openmoji_date": "2020-12-27",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
@@ -1316,8 +1316,8 @@
     "annotation": "sad but relieved face",
     "tags": "disappointed, face, relieved, whew",
     "openmoji_tags": "",
-    "openmoji_author": "Mariella Steeb",
-    "openmoji_date": "2018-04-18",
+    "openmoji_author": "Liz Bravo",
+    "openmoji_date": "2020-12-27",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
@@ -1486,8 +1486,8 @@
     "annotation": "yawning face",
     "tags": "bored, tired, yawn",
     "openmoji_tags": "",
-    "openmoji_author": "Laura Dworatschek",
-    "openmoji_date": "2019-05-06",
+    "openmoji_author": "Liz Bravo",
+    "openmoji_date": "2020-12-27",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
@@ -1554,8 +1554,8 @@
     "annotation": "face with symbols on mouth",
     "tags": "swearing",
     "openmoji_tags": "angry",
-    "openmoji_author": "Mariella Steeb",
-    "openmoji_date": "2018-04-18",
+    "openmoji_author": "Liz Bravo",
+    "openmoji_date": "2020-12-27",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
