@@ -1252,7 +1252,7 @@ tr:nth-child(even) {
         <td>fearful face</td>
         <td>face,  fear,  fearful,  scared</td>
         <td></td>
-        <td>Mariella Steeb</td>
+        <td>Liz Bravo</td>
         <td><a download href="src/smileys-emotion/face-concerned/1F628.svg">⬇</a></td>
     </tr>
     
@@ -1284,7 +1284,7 @@ tr:nth-child(even) {
         <td>sad but relieved face</td>
         <td>disappointed,  face,  relieved,  whew</td>
         <td></td>
-        <td>Mariella Steeb</td>
+        <td>Liz Bravo</td>
         <td><a download href="src/smileys-emotion/face-concerned/1F625.svg">⬇</a></td>
     </tr>
     
@@ -1444,7 +1444,7 @@ tr:nth-child(even) {
         <td>yawning face</td>
         <td>bored,  tired,  yawn</td>
         <td></td>
-        <td>Laura Dworatschek</td>
+        <td>Liz Bravo</td>
         <td><a download href="src/smileys-emotion/face-concerned/1F971.svg">⬇</a></td>
     </tr>
     
@@ -1508,7 +1508,7 @@ tr:nth-child(even) {
         <td>face with symbols on mouth</td>
         <td>swearing</td>
         <td>angry</td>
-        <td>Mariella Steeb</td>
+        <td>Liz Bravo</td>
         <td><a download href="src/smileys-emotion/face-negative/1F92C.svg">⬇</a></td>
     </tr>
     
